<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:id="@+id/card_trailer"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    android:layout_marginLeft="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_trailer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/trailer_thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/play_icon"
                app:layout_constraintBottom_toBottomOf="@+id/image_trailer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play_circle_filled" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/trailer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                app:trimCollapsedText="Show list"
                app:trimExpandedText="Read more"
                app:trimMode="trimModeLength"
                app:trimLength="15"
                app:colorClickableText="@android:color/holo_blue_light"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/secondaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_trailer"
                tools:text="@string/movie_trailer_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>